# definit

./: .importlinter  README.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
cfp/: euro_python_2026.md  kgc_2026.md  warsaw_python_pizza_2026.md
data_md/computer_science/: index.md
data_md/computer_science/definitions/data_structure/collection/: associative_array.md  bag.md  list.md
data_md/mathematics/: index.md
data_md/mathematics/definitions/graph/: directed_graph.md  graph.md  node.md
data_md/mathematics/definitions/graph/tree/: tree.md
definit/data_parser/: interface.py  md.py
definit/test/data_parser/: test_data_parser_md.py
definit/test/visualization/: test_networkx.py
definit/visualization/dag/: networkx.py
presentation/common/: generate_qr_code.py
presentation/warsaw_python_pizza/: slides.md  slides_scratch.md
src/definit/dag/: dag.py
src/definit/db/: interface.py  md.py
src/definit/definition/: definition.py  definition_key.py  track.py
src/definit/test/data_parser/: test_data_parser_md.py
src/definit/test/visualization/: test_networkx.py
src/definit/visualization/dag/: networkx.py
