[project]
name = "definit"
version = "0.2.0"
description = "Hierarchy of precise definitions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx",
    "matplotlib",
    "definit-db==0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
definit = ["*.py"]
